css/style.css
/* ... */
.testimonial .swiper {
    overflow: hidden;
}

.testimonial p.title {
    margin-top: .1em;
    padding: .5em 0em 1em;
    font-family: var(--roboto);
    color: var(--primary);
    font-size: 2em;
    font-weight: 600;
    text-align: left;
}

.testimonial p.title span {
    border-top: 7px solid var(--secondary);
}

@media screen and (max-width:700px) {
    .group__list p.title {
        font-size: 1.8em;
    }
}

.testimonial__card {
    display: grid;
    grid-template-columns: repeat(12, 1fr);
}

.testimonial__image {
    grid-column: 1/6;
    /* padding: 3em 2em; */
}

.testimonial__image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
}

.testimonial__cotent {
    padding: 3em;
    grid-column: 6/13;
    display: flex;
    justify-content: center;
    align-items: flex-start;
    flex-direction: column;
    background: url('../images/bg.png') no-repeat;
    background-size: 50%;
    background-position: 168% -120%;

}

.testimonial__cotent img {
    width: 30px;
}

.testimonial__cotent .testimonial__desc {
    margin-top: 1em;
    max-width: 450px;
    text-align: justify;
    font-size: 1em;
    font-family: var(--inter);
    font-weight: 600;
    color: var(--dark-gray);
}

.testimonial__cotent p.name {
    margin-top: 2em;
    color: var(--primary);
    font-family: var(--roboto);
    font-weight: 500;
    font-size: .9em;
}

.testimonial__cotent p.profession {
    font-family: var(--inter);
    font-weight: 500;
    font-size: .8em;
    color: var(--secondary);
}

.next_btn {
    position: absolute;
    top: 80%;
    right: 10%;
    background: var(--primary-btn);
    opacity: .8;
    color: var(--white);
    padding: 10px;
    font-size: 2em;
    display: grid;
    place-items: center;
    cursor: pointer;
    border-radius: 50%;
    z-index: 1;

}

.prev_btn {
    position: absolute;
    top: 80%;
    left: 75%;
    padding: 10px;
    background: var(--secondary-btn);
    opacity: .8;
    font-size: 2em;
    color: var(--white);
    display: grid;
    place-items: center;
    cursor: pointer;
    border-radius: 50%;
    z-index: 3;
}

@media screen and (max-width:1180px) {
    .testimonial__image {
        grid-column: 1/13;
    }

    .testimonial__cotent {
        grid-column: 1/13;
    }

}

@media screen and (max-width:700px) {
    .testimonial__cotent .testimonial__desc {
        font-size: .8em;
    }

    .testimonial__cotent {
        padding: 5%;
    }
}

@media screen and (max-width:1100px) {
    .next_btn {
        position: absolute;
        top: 40%;
        right: 5%;
        background: rgba(0, 0, 0, .2);
        backdrop-filter: blur(30px);
        color: var(--primary-btn);
    }

    .prev_btn {
        position: absolute;
        top: 40%;
        left: 5%;
        background: rgba(0, 0, 0, .4);
        backdrop-filter: blur(30px);
        color: var(--secondary-btn);
    }
}

/* FAQ section */

.FAQ {
    margin-top: 7%;
    padding-inline: 5%;
    display: grid;
    grid-template-columns: repeat(12, 1fr);
    gap: 2em;
}

.faq__image {
    grid-column: 1/7;
    display: flex;
    flex-direction: row;
    align-items: flex-start;
    justify-content: start;
}

.faq__image img {
    width: 100%;
    object-fit: contain;
}

.faq__content {
    grid-column: 7/13;
}

.faq__content .title {
    font-family: var(--roboto);
    font-size: 2em;
    font-weight: 600;
    color: var(--primary-btn);
    margin-bottom: 1em;
}

.q__and__a {
    border-bottom: 3px solid var(--border);
}

.q__and__a .question {
    margin-top: 2em;
    padding: 0 2% 0 0;
    width: 100%;
    display: flex;
    align-items: center;
    justify-content: space-between;
    font-family: var(--roboto);
    font-size: 1.1em;
    font-weight: 600;
    cursor: pointer;
    color: var(--dark);
}

.q__and__a .answer {
    margin: .7em 0 1em 0;
    font-family: var(--inter);
    font-weight: 500;
    font-size: .9em;
    color: var(--dark-gray);
}

.q__and__a .answer {
    max-height: 0px;
    overflow: hidden;
    transition: max-height 1.2s ease;
    text-align: justify;
}

.q__and__a.active .answer {
    max-height: 300px;
}

@media screen and (max-width:1280px) {
    .FAQ
    {
        gap: 2em;
    }
    .faq__image {
        grid-column: 1/13;
        display: grid;
        place-items: center;
    }

    .faq__image img {
        width: 50%;
    }

    .faq__content {
        grid-column: 1/13;
    }
}

@media screen and (max-width:700px) {



    .FAQ .faq__content .title {
        font-size: 1.8em;
    }

    .faq__image img {
        width: 70%;
        margin-bottom: 2em;
    }
}

/* footer */

footer {
    margin-top: 7%;
    display: flex;
    flex-direction: column;
    align-items: center;
    justify-content: center;
    background: var(--bg-4);
    border-top: 2px solid var(--border);
    padding: 2em;
}

footer .footer__logo {
    display: flex;
    align-items: center;
    justify-content: center;
    font-family: var(--inter);
    font-size: 1em;
    font-weight: 600;
    color: var(--primary);
}

.footer__logo img {
    width: 25px;
    margin-right: 5px;
}

.footer__links {
    margin-top: 1em;
}

.footer__links a {
    color: var(--dark);
    font-size: 1em;
    font-family: var(--roboto);
}

